# DRayTracer

./: CMakeLists.txt  README.md  camera.h  constants.h  image.cpp  image.h  main-mpi.cpp  main.cpp  random.cpp  random.h  raytracer.cpp  raytracer.h  renderer.cpp  renderer.h  scene.cpp  scene.h  thread-pool.h  timing.h  utils.h
docker-mpi/: Dockerfile  download-embree.sh
